--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+server.port=9090
+server.servlet.context-path=/api
 
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:
+spring.datasource.username=sa
+spring.datasource.password=
+spring.sql.init.mode=always
+spring.jpa.show-sql=true
+
+#hibernate
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.jpa.hibernate.ddl-auto=create
+
+
+spring.profiles.include=oauth
