--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:
+spring.datasource.url=jdbc:h2:mem:authDB
 spring.datasource.username=sa
 spring.datasource.password=
 spring.sql.init.mode=always
@@ -21,5 +21,5 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.hibernate.ddl-auto=create
 
-
+#oauth2 properties
 spring.profiles.include=oauth
