--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-server.port=9090
+server.port=8080
 server.servlet.context-path=/api
 
-spring.mvc.view.prefix=/templates/
-spring.mvc.view.suffix=.html
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.enabled=true
+spring.thymeleaf.check-template-location=true
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -20,6 +22,9 @@ spring.jpa.properties.hibernate.highlight_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.hibernate.ddl-auto=create
+
+#security filter debug
+logging.level.org.springframework.security=DEBUG
 
 #oauth2 properties
 spring.profiles.include=oauth
