edit token login success redirect service.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.jpa.properties.hibernate.highlight_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
 
 #security filter debug
 logging.level.org.springframework.security=DEBUG
